# Homework2-Emanuele-Fusco-P38000338

./: CMakeLists.txt  README.md  package.xml
action_tutorials_cpp/: package.xml
action_tutorials_cpp/src/: ros2_kdl_action_server.cpp
action_tutorials_interfaces/: package.xml
iiwa_description/gazebo/models/arucotag/: model.sdf
include/: kdl_control.h  utils.h
launch/: ros2_kdl.launch.py
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py
ros2_iiwa/iiwa_description/: package.xml
ros2_iiwa/iiwa_description/config/: initial_positions.yaml
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.config  model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: empty.world  nuovo.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro  iiwa_camera.xacro
ros2_kdl_action_interface/: CMakeLists.txt  package.xml
ros2_kdl_action_interface/action/: Ros2kdl.action
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: Ros2kdl.action
ros2_kdl_package/config/: param.yaml
ros2_kdl_package/include/: kdl_control.h  utils.h
ros2_kdl_package/launch/: ros2_kdl.launch.py
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_client_node.cpp  ros2_kdl_node.cpp
ros2_kdl_package/src/install/: local_setup.sh  setup.sh
ros2_kdl_package/src/log/: latest_build
src/: kdl_control.cpp
