<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_kdl_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emanuele.fusco2@studenti.unina.it">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  
    <!-- Dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- point 1c -->
  <depend>ros2_kdl_action_interface</depend>
  <depend>rclcpp_action</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
